--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./build/index.js",
+    "build": "npx tsc",
+    "start": "nodemon",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon ./build/index.js\""
   },
   "keywords": [],
@@ -23,6 +23,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.4",
     "redis": "^4.6.8",
+    "ts-node": "^10.9.1",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
