--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/otp-generator": "^4.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.4",
+    "otp-generator": "^4.0.1",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
