--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/multer": "^1.4.8",
     "@types/otp-generator": "^4.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -22,6 +23,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.4",
     "otp-generator": "^4.0.1",
