--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/multer": "^1.4.8",
-    "@types/otp-generator": "^4.0.0",
+    "@types/multer-s3": "^3.0.1",
+    "aws-sdk": "^2.1468.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.4",
     "otp-generator": "^4.0.1",
@@ -32,13 +33,18 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.3",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.2",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/multer": "^1.4.8",
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.5.7",
     "@types/nodemailer": "^6.4.10",
+    "@types/otp-generator": "^4.0.0",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
