--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.4",
     "otp-generator": "^4.0.1",
+    "stripe": "^14.1.0",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.1",
     "yup": "^1.2.0"
