--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-fileupload": "^1.4.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^3.2.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.4",
     "otp-generator": "^4.0.1",
